--- a/css/shyle2.css
+++ b/css/shyle2.css
@@ -132,16 +132,51 @@ nav {
     font-family: var(--secondary-text);
     color: black;
 } 
+.circle{
+    width: 130px;
+    height: 130px;
+    position: absolute;
+    top: 100px;
+    left: 45%;
+    transform: translateX(-50%);
+    border-radius: 50%;
+   border: 2px solid var(--main-color);
+    z-index: 2;
+    animation: round 3s linear infinite;
+
+}
+@keyframes round {
+    0%{
+        transform: rotate(0deg)
+    }
+   100%{
+        transform: rotate(360deg)
+    }
+    
+}
+.circle::after{
+    content: '';
+    position: absolute;
+    top: 11px;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: var(--main-color);
+   
+
+}
+
 
 #banner {
   background: url(../Image/banner.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-
   position: relative;
-  padding-top: 700px;
-  margin-bottom: 700px;
+  padding-top: 400px;
+  padding-bottom: 400px;
+ 
   z-index: -1;
 }
 
@@ -168,7 +203,38 @@ nav {
     font-weight: 400;
     font-size: 18px;
     color: var(--secondary-text);
-    line-height: 50px;
+    line-height: 30px;
   
    
+}
+.cardSection{
+  margin-top: -180px;
+  margin-bottom: 100px;
+}
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.flex-container .card {
+  margin-right: 30px;
+  background: #FFFFFF;
+  padding: 40px 46px 40px 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.flex-container .text h4{
+  font-family: var(--secondary-text);
+  padding: 10px 0;
+  font-weight: 600;
+  font-size: 28px;
+
+}
+.flex-container .text p{
+  font-family: var(--secondary-text);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 200%;
+
 }
