--- a/css/shyle2.css
+++ b/css/shyle2.css
@@ -228,6 +228,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .digitalHeader .text p {
@@ -248,9 +249,137 @@ nav {
   font-size: 48px;
 }
 
-.digitalHeader .icon i{
-  color: #C087EE;
+.digitalHeader .icon i {
+  color: #c087ee;
   width: 15px;
+}
+.digitalMainSection {
+  display: flex;
+  margin-bottom: 100px;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-bottom: 100px;
+}
 
+.digitalMainSection .img {
+  flex: 50%;
+  width: 50%;
+  position: absolute;
+  margin-top: 50px;
+  left: 0;
+  top: 50px;
+  
+}
+
+.digitalMainSection .img img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  
+  
+}
+.digitalMainSection .moreInfo {
+  flex: 50%;
+  width: 50%;
+  padding-left: 100px;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  position: absolute;
+  right: 0;
+
+  top: 50px;
+  z-index: -2;
+}
+/* .digitalMainSection .moreInfo::after{
+  content: "";
+  position: absolute;
+  top: 50px;
+  left: 0;
+  background: url(../Image/Vector.png);
+  z-index: 2;
+} */
+.digitalMainSection .moreInfo .textgap{
+ 
+  margin-left: 120px;
+  
+}
+.digitalMainSection .moreInfo h3 {
+  font-family: var(--secondary-text);
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 140%;
+  padding-right: 200px;
+  
+}
+.digitalMainSection .moreInfo p {
+  font-family: var(--rearer-text);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 200%;
+  padding-right: 220px;
+  padding-bottom: 10px;
+}
+
+.hundred{
+ padding-top: 80px;
+  position: relative;
+  background-repeat: no-repeat;
+  left: 100;
+  background-position: center;
+  margin-bottom: 80px;
+}
+.hundred .bg{
+  position: absolute;
+  margin-top: 40px;
+  background-repeat: no-repeat;
+  width: 20%;
+  top: 0;
+  left: 0;
+  transform: translateY(-50%);
+ z-index: -1;
+}
+.hundred .bg img{
+  width: 100%;
+}
+.hundredFlex{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 30px;
+}
+.hundredFlex .mobileApp{
+  flex: 40%;
+  
+}
+.hundredFlex .eCommerce{
+  flex: 55%;
+  
+}
+
+.hundredFlex .innerImg {
+  height: 328px;
+}
+
+.hundredFlex .mobileApp .innerImg img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hundredFlex .eCommerce .innerImg img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 
 }
+.hundredFlex .innerText{
+  padding: 30px;
+  background: #FFFFFF;
+  box-shadow: 0px -9px 40px rgba(26, 19, 62, 0.06);
+}
+.row-revers{
+  flex-direction: row-reverse;
+}
+
+
