--- a/css/shyle2.css
+++ b/css/shyle2.css
@@ -224,14 +224,19 @@ nav {
   line-height: 200%;
 }
 
-.digitalHeader {
+.digitalSection{
+  position: relative;
+  margin-bottom: 300px;
+}
+.digitalSection .digitalHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 100px;
+
 }
 
-.digitalHeader .text p {
+.digitalSection .digitalHeader .text p {
   text-transform: capitalize;
   color: var(--main-color);
   font-family: var(--secondary-text);
@@ -239,7 +244,7 @@ nav {
   font-size: 20px;
   margin-bottom: 5px;
 }
-.digitalHeader .text h3 {
+.digitalSection .digitalHeader .text h3 {
   text-transform: capitalize;
   color: var(--header-color);
   font-family: var(--secondary-text);
@@ -249,56 +254,46 @@ nav {
   font-size: 48px;
 }
 
-.digitalHeader .icon i {
+.digitalSection .digitalHeader .icon i {
   color: #c087ee;
   width: 15px;
 }
-.digitalMainSection {
+.digitalSection .digitalMainSection {
   display: flex;
-  margin-bottom: 100px;
   justify-content: center;
   align-items: center;
-  position: relative;
-  margin-bottom: 100px;
+
 }
 
 .digitalMainSection .img {
   flex: 50%;
   width: 50%;
-  position: absolute;
   margin-top: 50px;
-  left: 0;
-  top: 50px;
+  
   
 }
 
 .digitalMainSection .img img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-  
+  width: 50%;
+ height: 400px;
+  object-fit: cover; 
   
 }
 .digitalMainSection .moreInfo {
   flex: 50%;
   width: 50%;
+  background-color: var(--background-color2);
   padding-left: 100px;
-  padding-bottom: 50px;
-  padding-top: 50px;
+ margin-top: 200px;
+  
+  padding-bottom: 400px;
   position: absolute;
   right: 0;
-
-  top: 50px;
+  top: 100px;
+  bottom: 0;
   z-index: -2;
 }
-/* .digitalMainSection .moreInfo::after{
-  content: "";
-  position: absolute;
-  top: 50px;
-  left: 0;
-  background: url(../Image/Vector.png);
-  z-index: 2;
-} */
+
 .digitalMainSection .moreInfo .textgap{
  
   margin-left: 120px;
@@ -322,9 +317,9 @@ nav {
 }
 
 .hundred{
- padding-top: 80px;
+  padding-top: 80px;
   position: relative;
-  background-repeat: no-repeat;
+  
   left: 100;
   background-position: center;
   margin-bottom: 80px;
@@ -381,5 +376,70 @@ nav {
 .row-revers{
   flex-direction: row-reverse;
 }
+
+.completed-works{
+  background: url(../Image/bg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.completed-services{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.completed-project{
+  flex: 50%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 50px;
+}
+.smallcard{
+  flex: 40%;
+  background-color: #ffff;
+  padding: 74px 50px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.smallcard h5{
+  font-family: var(--secondary-text);
+  font-weight: 600;
+  font-size: 40px;
+  color: var(--header-color);
+  margin-bottom: 5px;
+}
+
+.smallcard p{
+font-family:var(--rearer-text);
+font-weight: 400;
+font-size: 18px;
+color: var(--smallText-color);
+}
+
+.completed-tittle{
+  flex: 50%;
+  padding: 50px;
+}
+.completed-tittle h3{
+font-family: var(--secondary-text);
+font-weight: 600;
+font-size: 48px;
+line-height: 140%;
+
+}
+.completed-tittle p{
+font-family: var(--rearer-text);
+font-weight: 400;
+font-size: 18px;
+line-height: 200%;
+margin-bottom: 20px;
+
+}
+
 
 
