--- a/css/shyle2.css
+++ b/css/shyle2.css
@@ -224,16 +224,16 @@ nav {
   line-height: 200%;
 }
 
-.digitalSection{
+.digitalSection {
   position: relative;
-  margin-bottom: 300px;
+  margin-bottom: 100px;
 }
+
 .digitalSection .digitalHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 100px;
-
 }
 
 .digitalSection .digitalHeader .text p {
@@ -258,73 +258,79 @@ nav {
   color: #c087ee;
   width: 15px;
 }
-.digitalSection .digitalMainSection {
+
+.digitalMainSection {
   display: flex;
-  justify-content: center;
-  align-items: center;
-
 }
 
-.digitalMainSection .img {
-  flex: 50%;
-  width: 50%;
-  margin-top: 50px;
-  
-  
-}
-
-.digitalMainSection .img img {
-  width: 50%;
- height: 400px;
-  object-fit: cover; 
-  
-}
-.digitalMainSection .moreInfo {
-  flex: 50%;
-  width: 50%;
-  background-color: var(--background-color2);
-  padding-left: 100px;
- margin-top: 200px;
-  
-  padding-bottom: 400px;
+.digitalMainSection .left {
   position: absolute;
-  right: 0;
-  top: 100px;
-  bottom: 0;
-  z-index: -2;
+  width: 40%;
+  margin-top: 50px;
+}
+.digitalMainSection .left img {
+  width: 100%;
+  object-fit: cover;
+}
+.digitalMainSection #rightId {
+  background-color: var(--background-color2);
+}
+.digitalMainSection .right {
+  width: 60%;
+  background: url(../Image/Vector.png);
+  background-repeat: no-repeat;
+  background-position: bottom -100px right -0px;
+  padding-left: 80px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  margin-left: auto;
+  z-index: -1;
 }
 
-.digitalMainSection .moreInfo .textgap{
- 
-  margin-left: 120px;
-  
+.digitalMainSection .right .textgap {
+  margin-left: 30px;
 }
-.digitalMainSection .moreInfo h3 {
+.digitalMainSection .right .textgap h3 {
   font-family: var(--secondary-text);
   font-weight: 600;
+  color: var(--header-color);
+  padding-right: 200px;
   font-size: 36px;
   line-height: 140%;
-  padding-right: 200px;
-  
+  text-transform: capitalize;
 }
-.digitalMainSection .moreInfo p {
+.digitalMainSection .right .textgap p {
   font-family: var(--rearer-text);
   font-weight: 400;
   font-size: 18px;
   line-height: 200%;
-  padding-right: 220px;
-  padding-bottom: 10px;
+  text-transform: capitalize;
 }
 
-.hundred{
+.hundred {
   padding-top: 80px;
   position: relative;
-  
   left: 100;
   background-position: center;
   margin-bottom: 80px;
 }
-.hundred .bg{
+
+.hundredHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.hundredHeader .text h3 {
+  font-family: var(--secondary-text);
+  font-weight: 600;
+  font-size: 48px;
+  color: var(--header-color);
+  width: 700px;
+  line-height: 140%;
+}
+
+.hundred .bg {
   position: absolute;
   margin-top: 40px;
   background-repeat: no-repeat;
@@ -332,63 +338,61 @@ nav {
   top: 0;
   left: 0;
   transform: translateY(-50%);
- z-index: -1;
+  z-index: -1;
 }
-.hundred .bg img{
+.hundred .bg img {
   width: 100%;
 }
-.hundredFlex{
+.hundredFlex {
   display: flex;
   justify-content: center;
   gap: 30px;
   margin-bottom: 30px;
 }
-.hundredFlex .mobileApp{
+.hundredFlex .mobileApp {
   flex: 40%;
-  
 }
-.hundredFlex .eCommerce{
+.hundredFlex .eCommerce {
   flex: 55%;
-  
 }
 
 .hundredFlex .innerImg {
   height: 328px;
 }
 
-.hundredFlex .mobileApp .innerImg img{
+.hundredFlex .mobileApp .innerImg img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.hundredFlex .eCommerce .innerImg img{
+.hundredFlex .eCommerce .innerImg img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-
 }
-.hundredFlex .innerText{
+.hundredFlex .innerText {
   padding: 30px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px -9px 40px rgba(26, 19, 62, 0.06);
 }
-.row-revers{
+.row-revers {
   flex-direction: row-reverse;
 }
 
-.completed-works{
+.completed-works {
   background: url(../Image/bg.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin-bottom: 100px;
 }
-.completed-services{
+.completed-services {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.completed-project{
+.completed-project {
   flex: 50%;
   display: flex;
   justify-content: space-between;
@@ -398,7 +402,7 @@ nav {
   padding-bottom: 20px;
   padding-left: 50px;
 }
-.smallcard{
+.smallcard {
   flex: 40%;
   background-color: #ffff;
   padding: 74px 50px;
@@ -406,7 +410,7 @@ nav {
   text-align: center;
 }
 
-.smallcard h5{
+.smallcard h5 {
   font-family: var(--secondary-text);
   font-weight: 600;
   font-size: 40px;
@@ -414,32 +418,138 @@ nav {
   margin-bottom: 5px;
 }
 
-.smallcard p{
-font-family:var(--rearer-text);
-font-weight: 400;
-font-size: 18px;
-color: var(--smallText-color);
+.smallcard p {
+  font-family: var(--rearer-text);
+  font-weight: 400;
+  font-size: 18px;
+  color: var(--smallText-color);
 }
 
-.completed-tittle{
+.completed-tittle {
   flex: 50%;
   padding: 50px;
 }
-.completed-tittle h3{
+.completed-tittle h3 {
+  font-family: var(--secondary-text);
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 140%;
+}
+.completed-tittle p {
+  font-family: var(--rearer-text);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 200%;
+  margin-bottom: 20px;
+}
+.globalCompaniesSection {
+  margin-bottom: 100px;
+ 
+}
+
+.globalCompaniesSection .globalCompaniesText h3 {
+  text-align: center;
+  font-family: var(--secondary-text);
+  padding: 20px 250px;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 140%;
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 30px;
+}
+
+.globalCompaniesSection .companies{
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  
+}
+
+.globalCompaniesSection .companies .logos
+{
+text-align: center;
+padding-top: 100px;
+width: 210px;
+height: 100px;
+left: 495px;
+top: 4507px;
+background: #FDF9F8;
+
+}
+
+.ourCustomerSay{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
+  padding: 20px;
+  background: var(--background-color);
+}
+
+.ourCustomerSay .left{
+  width: 40%;
+}
+.ourCustomerSay .left .header h3{
 font-family: var(--secondary-text);
+color: var(--header-color);
 font-weight: 600;
 font-size: 48px;
 line-height: 140%;
-
+  
 }
-.completed-tittle p{
+
+.ourCustomerSay .right{
+  width: 40%;
+}
+.ourCustomerSay .right img{
+  width: 100%;
+  border-radius: 18px;
+}
+.ourCustomerSay .left .leftImg{
+  display: flex;
+  gap: 5%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.ourCustomerSay .left .leftImg .leftflex{
+  width: 20%;
+ 
+}
+.ourCustomerSay .left .leftImg .leftflex img{
+  width: 100%;
+  height: 100px;
+  border-radius: 15px ;
+  object-fit: cover;
+}
+.leftSmallText p{
 font-family: var(--rearer-text);
 font-weight: 400;
-font-size: 18px;
-line-height: 200%;
-margin-bottom: 20px;
+font-size: 20px;
+line-height: 180%;
+}
+.btn-text {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+}
+.btn-text h5{
+font-family: var(--primary-text);
+font-weight: 600;
+font-size: 36px;
+line-height: 180%;
+}
+.btn-text .icon #icon1{
+  padding: 20px;
+  background-color: var(--background-color2);
+  border-radius: 5px;
+  margin-right: 5px;
+}
+.btn-text .icon #icon2{
+  padding: 20px;
+  background-color: var(--main-color);
+  border-radius: 5px;
 
 }
-
-
-
